# Langchain-Lean

./: README.md  pyproject.toml
Docker/: Dockerfile
examples/: math_agent_test.py  mvp_smoke_test.py  test_setup.py
langchain_lean/: __init__.py  toolkit.py
langchain_lean/core/: __init__.py  enviroment.py  environment.py  evaluator.py  parser.py
langchain_lean/tools/: __init__.py  repl_tool.py  run_tool.py  search_tool.py  state_tool.py
lean_workspace/: check.lean  lake-manifest.json  lakefile.lean
lean_workspace/.lake/: lakefile.olean  lakefile.olean.trace
tests/: conftest.py  test_parser.py  test_search_tool.py  test_toolkit.py
